# sv-elab

./: BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md
.github/workflows/: bazel.yaml  build-and-test.yaml  coverage.yaml  tag.yaml
dependency_support/: slang.BUILD  slang_ext.bzl
docs/: MAINTAINERS.md
src/: CMakeLists.txt  blackboxes.cc  builder.cc  diag.cc  diag.h  slang_frontend.cc  slang_frontend.h
tests/: CMakeLists.txt
tests/various/: bb_nettype_port.ys  parameters.ys  unknown_cells.ys
